Cleaned up initial implementation of ConsistencyFix for preliminary code review.
src/java/voldemort/client/protocol/admin/AdminClient.java
- annotated repairEntry method with TODO items to get review feedback on
- Created new type QueryKeyResult to get rid of a struct of type  Pair<ByteArray, Pair<List<Versioned<byte[]>>, Exception>>

src/java/voldemort/utils/ConsistencyFix.java
- added output file to list non-fixed keys in
- modulate output based on verbose flag
- refactored giant method(s) into smaller methods
- cleaned up TODO comments for review feedback

test/unit/voldemort/client/AdminServiceBasicTest.java
- uses QueryKeyResult type

src/java/voldemort/VoldemortAdminTool.java
- uses QueryKeyResult type